--- a/Semana 2/Semana2/public_html/index.html
+++ b/Semana 2/Semana2/public_html/index.html
@@ -1,36 +1,29 @@
 
 <!-- saved from url=(0051)http://www.jlabstudio.com/webgl/ejemplos/demo1.html -->
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
-<title>Aprende webGL — Leccion 1</title>
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
+<title>Aprende webGL ï¿½ Leccion 1</title>
 
 
-<script type="text/javascript" src="./Aprende webGL — Leccion 1_files/glMatrix-0.9.5.min.js"></script>
+<script type="text/javascript" src=".//glMatrix-0.9.5.min.js"></script>
 
 <script id="shader-fs" type="x-shader/x-fragment">
     #ifdef GL_ES
     precision highp float;
     #endif
 
-	varying vec4 vcolor;//semana 3
-	
     void main(void) {
-        //gl_FragColor = vec4(1.0, 1.0, 1.0, 1.0);
-		gl_FragColor = vcolor;//semana 3
+        gl_FragColor = vec4(1.0, 1.0, 1.0, 1.0);
     }
-</script> 
+</script>
 
 <script id="shader-vs" type="x-shader/x-vertex">
     attribute vec3 aVertexPosition;
-	attribute vec4 aVertexColor;//semana 3
 
     uniform mat4 uMVMatrix;
     uniform mat4 uPMatrix;
-	
-	varying vec4 vcolor;//semana 3
 
     void main(void) {
         gl_Position = uPMatrix * uMVMatrix * vec4(aVertexPosition, 1.0);
-		vcolor = aVertexColor;//Semana 3
     }
 </script>
 
@@ -106,9 +99,6 @@
 
         shaderProgram.vertexPositionAttribute = gl.getAttribLocation(shaderProgram, "aVertexPosition");
         gl.enableVertexAttribArray(shaderProgram.vertexPositionAttribute);
-		
-		shaderProgram.vertexColorAttribute = gl.getAttribLocation(shaderProgram, "aVertexColor");//semana 3
-		gl.enableVertexAttribArray(shaderProgram.vertexColorAttribute);//Semana 3
 
         shaderProgram.pMatrixUniform = gl.getUniformLocation(shaderProgram, "uPMatrix");
         shaderProgram.mvMatrixUniform = gl.getUniformLocation(shaderProgram, "uMVMatrix");
@@ -126,37 +116,23 @@
 
 
     var triangleVertexPositionBuffer;
-	var triangleVertexColorBuffer;// semana 3
-	
     var squareVertexPositionBuffer;
-	var squareVertexColorBuffer;//semana 3
 
     function initBuffers() {
         triangleVertexPositionBuffer = gl.createBuffer();
         gl.bindBuffer(gl.ARRAY_BUFFER, triangleVertexPositionBuffer);
         var vertices = [
-             0.0,  2.0,  0.0,
+             0.0,  1.0,  0.0,
             -1.0, -1.0,  0.0,
              1.0, -1.0,  0.0
         ];
         gl.bufferData(gl.ARRAY_BUFFER, new Float32Array(vertices), gl.STATIC_DRAW);
         triangleVertexPositionBuffer.itemSize = 3;
         triangleVertexPositionBuffer.numItems = 3;
-		
-		triangleVertexColorBuffer = gl.createBuffer();//semana 3
-		gl.bindBuffer(gl.ARRAY_BUFFER, triangleVertexColorBuffer);//semana 3
-		var colors = [//semana 3
-		 1.0, 0.0, 0.0, 1.0, //semana 3
-		 0.0, 1.0, 0.0, 1.0,//semana 3
-		 0.0, 0.0, 1.0, 1.0//semana 3
-		 ];//semana 3
-		 gl.bufferData(gl.ARRAY_BUFFER, new Float32Array(colors), gl.STATIC_DRAW);//semana 3
-		 triangleVertexColorBuffer.itemSize = 4;//semana3
-		 triangleVertexColorBuffer.itemSize = 3;//semana 3
 
         squareVertexPositionBuffer = gl.createBuffer();
         gl.bindBuffer(gl.ARRAY_BUFFER, squareVertexPositionBuffer);
-        vertices = [ 
+        vertices = [
              1.0,  1.0,  0.0,
             -1.0,  1.0,  0.0,
              1.0, -1.0,  0.0,
@@ -172,20 +148,17 @@
         gl.viewport(0, 0, gl.viewportWidth, gl.viewportHeight);
         gl.clear(gl.COLOR_BUFFER_BIT | gl.DEPTH_BUFFER_BIT);
 
-        mat4.perspective(45, gl.viewportWidth / gl.viewportHeight, 0.1, 100.0, pMatrix);
+        mat4.perspective(40, gl.viewportWidth / gl.viewportHeight, 0.1, 100.0, pMatrix);
 
         mat4.identity(mvMatrix);
 
-        mat4.translate(mvMatrix, [-1.5, 0.0, -10.0]);
+        mat4.translate(mvMatrix, [-3.0, 0.0, -14.0]);
         gl.bindBuffer(gl.ARRAY_BUFFER, triangleVertexPositionBuffer);
         gl.vertexAttribPointer(shaderProgram.vertexPositionAttribute, triangleVertexPositionBuffer.itemSize, gl.FLOAT, false, 0, 0);
-		gl.bindBuffer(gl.ARRAY_BUFFER, triangleVertexColorBuffer);//semana3
-		gl.vertexAttribPointer(shaderProgram.vertexColorAttribute, triangleVertexColorBuffer.itemSize, gl.FLOAT, false. 0,0);//semana 3
         setMatrixUniforms();
         gl.drawArrays(gl.TRIANGLES, 0, triangleVertexPositionBuffer.numItems);
 
-
-        mat4.translate(mvMatrix, [3.0, 0.0, 0.0]);
+        mat4.translate(mvMatrix, [6.0, 0.0, 0.0]);
         gl.bindBuffer(gl.ARRAY_BUFFER, squareVertexPositionBuffer);
         gl.vertexAttribPointer(shaderProgram.vertexPositionAttribute, squareVertexPositionBuffer.itemSize, gl.FLOAT, false, 0, 0);
         setMatrixUniforms();
@@ -200,7 +173,7 @@
         initShaders();
         initBuffers();
 
-        gl.clearColor(0.0, 0.0, 0.0, 1.0);
+        gl.clearColor(0.6, 0.0, 0.9, 1.0);
         gl.enable(gl.DEPTH_TEST);
 
         drawScene();
@@ -215,7 +188,7 @@
 
 <body onload="webGLStart();">
 
-    <canvas id="leccion1-canvas" style="border: none;" width="500" height="500"></canvas>
+    <canvas id="leccion1-canvas" style="border: none;" width="800" height="500"></canvas>
 
 
 
