--- a/Semana 7/Semana7/public_html/index.html
+++ b/Semana 7/Semana7/public_html/index.html
@@ -406,7 +406,7 @@
         neheTexture.image.onload = function() {//semana 6
             handleLoadedTexture(neheTexture)//semana 6
         }//semana 6
-        neheTexture.image.src = "UPBC.gif";//semana 6
+        neheTexture.image.src = "TEX0.gif";//semana 6
     }//semana 6
     
     function handleLoadedTexture(texture) {//semana 6
